# sarxarray

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CITATION.cff  README.md  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.cfg  sitemap.xml  sonar-project.properties  zenodo.json
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/skills/release-changelog/: SKILL.md
.github/skills/release-changelog/references/: CHANGELOG_ENTRY_TEMPLATE.md
.github/skills/release-changelog/scripts/: generate_release_section.sh
.github/workflows/: build.yml  doc_build.yml  doc_deploy.yml  joss_paper.yml  lint.yml  pypi.yml  python-package.yml  sonarcloud.yml
CHANGELOG/: index.html
CHANGLOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: CONTRIBUTING.md  index.html
api_reference/: index.html
common_ops/: common_ops.md  index.html
data_loading/: data_loading.md  index.html
dev/: index.html
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  api_reference.md  common_ops.md  data_loading.md  index.md  setup.md  usage.md
docs/notebooks/: demo_sarxarray.ipynb
example/: index.html
examples/: demo_mrm.ipynb  demo_sarxarray.ipynb  demo_sarxarray_spider.ipynb  demo_sarxarray_sprider.ipynb  read_slc_stack.py
examples/archive/: ALOS2_SEU_p36_coherence2.ipynb  ALOS2_sarxarray_datamodel.ipynb  S1_sarxarray_datamodel.ipynb
manipulations/: index.html  manipulations.md
notebooks/demo_sarxarray/: demo_sarxarray.ipynb  index.html
notebooks/demo_sarxarray_spider/: demo_sarxarray_spider.ipynb  index.html
paper/: paper.bib  paper.md
sarxarray/: __init__.py  _io.py  conf.py  stack.py  utils.py
search/: search_index.json
setup/: index.html  setup.md
tests/: test_io.py  test_lint.py  test_stack.py  test_utils.py
tests/data/: scene_0.binaray  scene_1.binaray
tests/data/metadata/meta_doris4/20180301/: metadata.res
tests/data/metadata/meta_doris4/20180312/: metadata.res
tests/data/metadata/meta_doris4/20180323/: metadata.res
tests/data/metadata/meta_doris5/20180306/: ifgs.res  metadata.res
tests/data/metadata/meta_doris5/20180312/: ifgs.res  metadata.res
tests/data/metadata/meta_doris5/20180318/: metadata.res
tests/data/metadata/meta_doris5/20180318_error_timestamp/: metadata.res
tests/data/metadata/meta_doris5/20180318_error_wavelength/: metadata.res
tests/data/metadata/meta_doris5/20180318_missing_fields/: metadata.res
tests/data/zarrs/20230319-coreg.znap/: .zattrs
tests/data/zarrs/20230319-coreg.znap/SNAP/: product_metadata.json
tests/data/zarrs/20230319-coreg.znap/h2ph_VV_19Mar2023/: 0.0
tests/data/zarrs/20230319-coreg.znap/i_VV_19Mar2023/: .zattrs  0.0
tests/data/zarrs/20230319-coreg.znap/latitude/: .zattrs
tests/data/zarrs/20230319-coreg.znap/longitude/: 0.0
tests/data/zarrs/20230319-coreg.znap/q_VV_19Mar2023/: .zarray  .zattrs  0.0
tests/data/zarrs/20230319-coreg.znap/slant_range_time/: .zattrs
tests/data/zarrs/20230331-coreg.znap/: .zattrs
tests/data/zarrs/20230331-coreg.znap/SNAP/: product_metadata.json
tests/data/zarrs/20230331-coreg.znap/elevation_VV/: 0.0
tests/data/zarrs/20230331-coreg.znap/i_VV_31Mar2023/: 0.0
tests/data/zarrs/20230331-coreg.znap/incident_angle/: 0.0
tests/data/zarrs/20230331-coreg.znap/latitude/: .zarray  0.0
tests/data/zarrs/20230331-coreg.znap/latitude_VV/: 0.0
tests/data/zarrs/20230331-coreg.znap/longitude_VV/: 0.0
tests/data/zarrs/20230331-coreg.znap/q_VV_31Mar2023/: 0.0
tests/data/zarrs/20230331-coreg.znap/slant_range_time/: 0.0
tests/data/zarrs/slcs_example.zarr/: .zmetadata
tests/data/zarrs/slcs_example.zarr/imag/: 0.0.1
tests/data/zarrs/slcs_example.zarr/range/: .zattrs
tests/data/zarrs/slcs_example.zarr/real/: .zattrs  0.0.0  0.0.1  0.0.2
tests/data/zarrs/slcs_example_broken_dim.zarr/: .zmetadata
tests/data/zarrs/slcs_example_broken_dim.zarr/azimuth/: .zarray  .zattrs  0
tests/data/zarrs/slcs_example_broken_dim.zarr/imag/: 0.0
tests/data/zarrs/slcs_example_broken_dim.zarr/real/: .zarray  .zattrs  0.0
tests/data/zarrs/slcs_example_broken_vars.zarr/: .zmetadata
tests/data/zarrs/slcs_example_broken_vars.zarr/imag/: .zarray  0.0.0  0.0.2
tests/data/zarrs/slcs_example_broken_vars.zarr/range/: .zarray  0
usage/: index.html  usage.md
