[metadata]
author = Netherlands eScience Center
name = sarxarray
version = 0.1.0
description = xarray extension for SAR images
keywords = sarxarray, sar, xarray
long_description = file: README.md
license = Apache
license_files = LICENSE
platform = any
classifiers =
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: InSAR
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/MotionbyLearning/sarxarray

[options]
packages = find:
python_requires = >=3.10
install_requires =
    xarray
    numpy
    dask
    distributed
    zarr

[options.extras_require]
doc =
    sphinx-click
    nbsphinx
    sphinx_rtd_theme
test =
    pytest
    pytest-cov
    pytest-timeout
